# fractals

./: .gitignore  README.md  mandelbrot.cabal
app/: Algorithms.hs  Box.hs  Configuration.hs  Main  Main.hs  Plot.hs  Region.hs  Shader.hs  ShaderAlgos.hs  Tile.hs
snippets/: Snippets.md
test/: Tests.hs
