cabal-version:      2.4
name:               mandelbrot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nick Everitt
maintainer:         nicholaseveritt@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mandelbrot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Box
                      Configuration
                      Plot
                      Region
                      Shader
                      Tile

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                      --QuickCheck >= 2.0

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite mandelbrot-tests
    type:             exitcode-stdio-1.0

    main-is:          Tests.hs

    other-modules:    Region
                      Tile

    build-depends:    base, QuickCheck, HUnit
    hs-source-dirs:   app, test
    default-language: Haskell2010
